# Flotorch-Eval-Mcp-Tool

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Flotorch_crawl/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
Flotorch_crawl/src/flotorch_crawl/: __init__.py  __main__.py  config.py  scraper.py  search.py  server.py
deploy/: README.md
deploy/ec2/: DEPLOY_GUIDE.md  README.md  deploy.sh  push-to-ecr.sh  user-data-asg.sh
deploy/huggingface/: DEPLOY_GUIDE.md  Dockerfile  README.md
src/flotorch_eval_mcp/: __init__.py  __main__.py  config.py  evaluator.py  server.py  utils.py
src/flotorch_eval_mcp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
